# smart-fixer

./: .gitattributes  .gitignore  .replit  AI_FIXES_COMPLETE.md  AI_MODULES_SETUP.md  API_ENDPOINTS.md  DOCUMENTATION.md  ENHANCED_OCR_VALIDATION.md  FIXES_SUMMARY.md  FOLLOW_SYSTEM_IMPLEMENTATION.md  GOOGLE_OAUTH_SETUP_COMPLETE.md  HOW_TO_CREATE_APPLICATION.md  INSTAGRAM_NOTIFICATION_SCENARIOS.md  INSTAGRAM_NOTIFICATION_SYSTEM.md  LICENSE  NAVIGATION_UPDATE_SUMMARY.md  OAUTH_FIXES_SUMMARY.md  OAUTH_ISSUE_RESOLUTION.md  OAUTH_SETUP.md  OAUTH_SIGNUP_FIX.md  QUICK_START_AI.md  README.md  SmartFixer-App.spec  TIME_TRACKING_IMPROVEMENTS.md  UPLOAD_CODE_FEATURE_SUMMARY.md  UPLOAD_FEATURE_IMPLEMENTATION.md  USER_PRESENCE_FEATURE.md  USER_PRESENCE_FINAL_SUMMARY.md  USER_PRESENCE_TRACKING_SUMMARY.md  add_image_lightbox.py  add_lightbox.py  add_presence_system.py  ai_helper.py  ai_models.py  api_docs.md  api_notifications.md  app.db.backup  app.py  apply_chat_fixes.py  apply_essential_fixes.py  (+151 more)
SmartFixer-Distribution/: README.txt  Run-SmartFixer-App.bat
attached_assets/: Pasted-Sab-kuch-sahi-hai-baas-ye-7-changes-hai-aache-se-karo-1-Dictionary-me-sirf-eak-drop-down-ho-jisme-se-1760122221757_1760122221758.txt  Pasted-Smart-code-reviewer-Ek-full-working-neat-clean-aur-future-ready-Smart-Code-Reviewer-Website-banao-1760119397250_1760119397252.txt
docs/: follow_functionality_fixes.md  language_validation.md  notification_system.md
static/: manifest.json
temp_exec/: tracking_routes.py
templates/: 403.html  auth.html  chat.html  editor.html  explore.html  followers.html  (+11 more)
(+79 files in other folders)
